--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <li>Mrs. Marifi Magdangal</li>
                         <li>Dr. Edna Talavera-Nisce</li>
                         <li>Mrs. Julieta A. Paguio</li>
-                        <li>Mrs. Anablle Ang-Angco</li>
+                        <li>Mrs. Annabelle Ang-Angco</li>
                         <li>Mrs. Rebecca Tan</li>
                         <li>Mrs. Abigail Lucas</li>
                         <br>
